# shrimp-detector

./: CMakeLists.txt  build_shrimp.sh
src/: main.cpp
